Fix text overflow in history page
This omitted the important overflow and text-overflow
rules that we use in MobileFrontend. The line height also
needs a slight adjustment.

Bug: T354218
(cherry picked from commit 72726eac36f41c704b48f0343987a8263ac0f596)

--- a/skinStyles/mediawiki.action.history.styles.less
+++ b/skinStyles/mediawiki.action.history.styles.less
@@ -73,12 +73,14 @@
 			-webkit-line-clamp: 2;
 			max-height: 2.6em;
 			color: @color-subtle;
-			line-height: 1.2;
+			line-height: 1.4;
 			white-space: normal;
 			display: -webkit-box;
 			-webkit-box-orient: vertical;
 			font-size: 0.875rem;
 			font-style: normal;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 	}
 
